--- a/always_free_launch_compute_instance/setup.yaml
+++ b/always_free_launch_compute_instance/setup.yaml
@@ -10,8 +10,8 @@
     msg: "Environment variable {{item}} not set. Please declare an environment variable with an appropriate value for the sample to work."
   when: item not in ansible_env
   with_items:
-    - "SAMPLE_COMPARTMENT_OCID"
-    - "SAMPLE_IMAGE_OCID"
+    - "instance_compartment"
+    - "instance_image"
 
 # find the availability domain that is Always Free eligible in this tenancy
 - name: List availbility domains
