variables updated in setup.yaml-2

--- a/always_free_launch_compute_instance/setup.yaml
+++ b/always_free_launch_compute_instance/setup.yaml
@@ -8,7 +8,7 @@
 - name: Check pre-requisites
   fail:
     msg: "Environment variable {{item}} not set. Please declare an environment variable with an appropriate value for the sample to work."
-  when: item not in ansible_env
+  when: item not in env
   with_items:
     - "instance_compartment"
     - "instance_image"
