--- a/always_free_launch_compute_instance/setup.yaml
+++ b/always_free_launch_compute_instance/setup.yaml
@@ -5,13 +5,13 @@
 # Apache License v2.0
 # See LICENSE.TXT for details.
 
-- name: Check pre-requisites
-  fail:
-    msg: "Environment variable {{item}} not set. Please declare an environment variable with an appropriate value for the sample to work."
-  when: item not in env
-  with_items:
-    - "instance_compartment"
-    - "instance_image"
+#- name: Check pre-requisites
+  #  fail:
+    #    msg: "Environment variable {{item}} not set. Please declare an environment variable with an appropriate value for the sample to work."
+      #  when: item not in env
+    #  with_items:
+    #    - "instance_compartment"
+      #    - "instance_image"
 
 # find the availability domain that is Always Free eligible in this tenancy
 - name: List availbility domains
